Revision history for Perl extension DBIx::DataModel.

v2.06 07.12.2011
  - new method Path::opposite()

v2.05 14.11.2011
  - bug fix in strict V2 mode : Table.pm was still using old V1 syntax "componentRoles"

v2.04 14.11.2011
  - bug fix in strict V2 mode : Path.pm was still using old V1 syntax

v2.03 11.11.2011
  - forgot to use Meta::Utils in Statement.pm.

v2.02 12.10.2011
  - namespace::autoclean conflicts with autoload. Replaced by namespace::clean

v2.01 07.10.2011
  - missing AutoExpand in v1 compatibility mode
  - suppress 1 warning in string comparison

v2.0 12.09.2011
   CPAN publish

v1.99_06 21.08.2011
  - refactoring : new class ConnectedSource, not to confuse with Statements

v1.99_05 14.08.2011

v1.99_04 13.08.2011
  - fixed broken test on perl 5.8/5.10 (MRO::Compat loaded too late)
  - yet more doc (Design.pod)

v1.99_03 06.08.2011
  - Reference.pod finished. Still work to do on other pods.

v1.99_02 02.08.2011
  - many updates in doc (not totally finished yet)

v1.99_01 31.07.2011
  MAJOR REVISION, see Doc/Delta_2.0.pod
  - new metaclass / reflection layer
  - use base ==> use parent
  - deprecated Autoload()
  - removed keepLasth, lasth
  - dropped support for positional args to select()

v1.29 25.07.2011
  - fixed limit/offset in Statement::JDBC (old bug never discovered!)

v1.28 10.06.2011
  - fixed tests when DBD::Mock < 1.39 ("skip" statement was wrong)
  - statement status is a dualvar (int, string)
  - $source->createStatement() is deprecated
  - new parameter for select() : -prepareAttrs 

v1.27 30.05.2011
  - fetch() : do not allow undefs in primary key
  - reuseRow() : hash key names are taken from $sth->{FetchHashKeyName};
  - bug fix: -resultAs => flat_arrayref does preserve column order
  - $schema->dbh(undef) erases the current $dbh

v1.26 31.10.2010
  - -postFetch renamed as -postBless
  - no longer import deprecated UNIVERSAL qw/isa/
  - fix tests broken by SQL::Abstract::Test 1.69 no longer case-insensitive

v1.25 03.06.2010